[package]
name = "async-ws"
version = "0.3.0"
edition = "2018"
description = "async websocket implementation"
license = "Apache-2.0 OR MIT"

[dependencies]
http = "0.2.5"
futures-lite = "1.12.0"
async-http-codec = "0.1.0"
anyhow = "1.0.44"
ring = "0.16"
base64 = "0.13.0"
log = "0.4.14"

[dev-dependencies]
#async-net-server-utils = { git = "https://github.com/FlorianUekermann/async-net-server-utils", version="*" }
simple_logger = "1.13.0"