[package]
name = "async-ws"
version = "0.3.0"
edition = "2018"
description = "async websocket implementation"
license = "Apache-2.0 OR MIT"

[dependencies]
http = "0.2.5"
futures = { version = "0.3.17", features = ["executor"] }
ring = "0.16"
base64 = "0.13.0"
log = "0.4.14"
thiserror = "1.0.30"
rand = "0.8.4"
utf-8 = "0.7.6"

[dev-dependencies]
async-http-codec = { git = "https://github.com/FlorianUekermann/async-http-codec" }
async-net-server-utils = { git = "https://github.com/FlorianUekermann/async-net-server-utils" }
simple_logger = "1.13.0"
anyhow = "1.0.48"